# documind

./: .gitignore  main.py  pyproject.toml
app/: document_loader.py  document_processor.py  embeddings.py  text_chunker.py  utils.py  vector_store.py
app/ingestion/: pipeline.py
app/routers/: ingest.py
app/utils/: helpers.py
